--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p>Cybersecurity Researcher &nbsp;&bull;&nbsp; Cybersecurity Consultant</p>
 						<nav>
 							<ul>
-								<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.linkedin.com/in/mbmkamel/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							</ul>
 						</nav>
 					</header>
