--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1>Mohammed B. M. Kamel</h1>
+						<h1>Dr. Mohammed (B. M. Kamel) ALSHAWKI</h1>
 						<p>Cybersecurity Researcher &nbsp;&bull;&nbsp; Cybersecurity Consultant</p>
 						<nav>
 							<ul>
-								<li><a href="https://www.linkedin.com/in/mbmkamel/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.linkedin.com/in/alshawki/" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://www.github/in/malshawki/" class="icon brands fa-github"><span class="label">Github</span></a></li>
+
 							</ul>
 						</nav>
 					</header>
